# CoverageFinder

./: CMakeLists.txt
assets/: imgui.ini
include/: CoverageApp.h
src/: CoverageApp.cpp
